--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Custom theme for En las Tablas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass --watch scss -o css"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/justinisamaker/enlastablas/issues"
   },
-  "homepage": "https://github.com/justinisamaker/enlastablas#readme"
+  "homepage": "https://github.com/justinisamaker/enlastablas#readme",
+  "dependencies": {
+    "node-sass": "^4.13.0",
+    "nodemon": "^2.0.2"
+  }
 }
