Switch up my scss task a little bit

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch scss/**/*.scss -o css"
+    "scss": "node-sass --watch scss -o css --output-style=compressed"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/justinisamaker/enlastablas#readme",
   "dependencies": {
-    "node-sass": "^4.13.0",
-    "nodemon": "^2.0.2"
+    "node-sass": "^4.13.0"
   }
 }
