--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch scss -o css --output-style=compressed"
+    "scss": "node-sass --watch scss -o css --output-style=compressed",
+    "build-css": "node-sass scss -o css --output-style=compressed"
   },
   "repository": {
     "type": "git",
